crates/jp_md/tests/snapshots/buffer__blockquotes.snap
---
source: crates/jp_md/tests/buffer.rs
description: "Source: blockquotes"
---
[
    Block {
        content: "Here is a Markdown document with the requested blockquote structures.\n\n",
        indent: 0,
    },
    Block {
        content: "> This blockquote contains **bold text** to emphasize a point and *italicized text* for subtle distinction.\n> It demonstrates basic inline formatting within a single level.\n\n",
        indent: 0,
    },
    Block {
        content: "> You can include [hyperlinks](https://github.com) and `inline code` snippets like `struct JP;` inside a blockquote.\n> This is useful for referencing technical documentation or specific implementation details.\n\n",
        indent: 0,
    },
    Flush {
        content: "> This level contains a ~~strikethrough~~ element.\n> > This is a nested blockquote.\n> > > This is a triple-nested blockquote, showing **deep** hierarchy.\n> Nested structures help in representing threaded conversations or hierarchical data.\n",
        indent: 0,
    },
]
