crates/jp_md/tests/snapshots/buffer__doc-inline.snap
---
source: crates/jp_md/tests/buffer.rs
description: "Source: doc-inline"
---
[
    Block {
        content: "# Inline Formatting\n",
        indent: 0,
    },
    Block {
        content: "This paragraph mixes **strong emphasis**, *light emphasis*, `inline code`, and a\n[labelled link](https://example.com/path) all in one flowing sentence to make\nsure the renderer handles them together rather than only in isolation.\n\n",
        indent: 0,
    },
    Block {
        content: "You can also use ~~strikethrough~~ and autolinks like <https://example.com>, and\nreference-style links such as [the spec][gfm] when the definition appears later\nin the same document instead of inline at the point of use.\n\n",
        indent: 0,
    },
    Block {
        content: "Subscripts such as H~2~O and superscripts such as x^2^ round out the inline set\nthat this renderer has enabled, and they should survive word-wrapping intact.\n\n",
        indent: 0,
    },
    Flush {
        content: "[gfm]: https://github.github.com/gfm/\n",
        indent: 0,
    },
]
