crates/jp_md/tests/snapshots/buffer__doc-long-prose.snap
---
source: crates/jp_md/tests/buffer.rs
description: "Source: doc-long-prose"
---
[
    Block {
        content: "# Design Rationale\n",
        indent: 0,
    },
    Block {
        content: "This is a deliberately long single paragraph of flowing prose with no internal line breaks, the kind an assistant emits while reasoning, written as one continuous line so that the streaming buffer has to commit it incrementally rather than waiting for a terminator that only arrives at the very end of the thought.\n\n",
        indent: 0,
    },
    Block {
        content: "A second equally long paragraph follows, again as a single unbroken line of prose, so that the corpus exercises back-to-back long paragraphs and the transitions between them without any intervening structure to lean on for block boundaries.\n\n",
        indent: 0,
    },
    Block {
        content: "## Caveat\n",
        indent: 0,
    },
    Flush {
        content: "Even this explanatory aside is written as ordinary flowing prose that should stream once it crosses the internal threshold, demonstrating that headings interleave cleanly with the long paragraphs surrounding them on either side.\n",
        indent: 0,
    },
]
