crates/jp_md/tests/snapshots/buffer__header-paragraph.snap
---
source: crates/jp_md/tests/buffer.rs
description: "Source: header-paragraph"
---
[
    Block {
        content: "# Lorem Ipsum\n",
        indent: 0,
    },
    Flush {
        content: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna\naliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint\noccaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n",
        indent: 0,
    },
]
