crates/jp_md/tests/snapshots/buffer__headers-lists.snap
---
source: crates/jp_md/tests/buffer.rs
description: "Source: headers-lists"
---
[
    Block {
        content: "# JP Project\n",
        indent: 0,
    },
    Block {
        content: "## Architecture\n",
        indent: 0,
    },
    Block {
        content: "JP is a CLI tool written in Rust designed for seamless integration with existing development workflows.\n\n",
        indent: 0,
    },
    Block {
        content: "## Features\n",
        indent: 0,
    },
    Block {
        content: "> JP provides a flexible and powerful pair-programming experience with LLMs.\n\n",
        indent: 0,
    },
    Block {
        content: "*   Core Modules\n",
        indent: 0,
    },
    Block {
        content: "*   Command Dispatcher\n",
        indent: 4,
    },
    Block {
        content: "*   LLM Integration Layer\n",
        indent: 4,
    },
    Block {
        content: "*   Tooling Support\n",
        indent: 0,
    },
    Block {
        content: "*   Test Runner\n",
        indent: 4,
    },
    Flush {
        content: "*   Code Scaffolder\n",
        indent: 4,
    },
]
