crates/jp_md/tests/snapshots/buffer__hr-setext-headers.snap
---
source: crates/jp_md/tests/buffer.rs
description: "Source: hr-setext-headers"
---
[
    Block {
        content: "# ATX Level 1 Header\n",
        indent: 0,
    },
    Block {
        content: "This paragraph demonstrates **strong emphasis**, *emphasis*, and `inline code`.\nMarkdown supports various inline styles for text decoration.\n\n",
        indent: 0,
    },
    Block {
        content: "---\n",
        indent: 0,
    },
    Block {
        content: "## ATX Level 2 Header\n",
        indent: 0,
    },
    Block {
        content: "The horizontal rule above separates sections. Below is a Setext-style header.\n\n",
        indent: 0,
    },
    Block {
        content: "Level 1 Setext Header\n=====================\n",
        indent: 0,
    },
    Block {
        content: "Level 2 Setext Header\n---------------------\n",
        indent: 0,
    },
    Block {
        content: "***\n",
        indent: 0,
    },
    Block {
        content: "### ATX Level 3 Header\n",
        indent: 0,
    },
    Flush {
        content: "You can also use ~~strikethrough~~ or [hyperlinks](https://rust-lang.org) within paragraphs.\nMultiple hashes determine the header depth in ATX style.\n",
        indent: 0,
    },
]
